--- a/src/Components/CSS/homeProductSlider.css
+++ b/src/Components/CSS/homeProductSlider.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   /* z-index: 1; */
   margin-top: 4%;
-  /* margin-bottom: 10rem; */
+  margin-bottom: 2rem;
 }
 
 .product-container {
